--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -65,6 +65,7 @@
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:textSize="20sp"
+                android:maxLength="10"
                 android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                 android:drawablePadding="10dp"
                 android:background="@drawable/rectangleshape"
