--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -57,6 +57,7 @@
                 android:textSize="20sp" />
 
             <EditText
+                android:id="@+id/editFirstName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
@@ -75,6 +76,7 @@
                 android:textSize="20sp" />
 
             <EditText
+                android:id="@+id/editLastName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
@@ -93,6 +95,7 @@
                 android:textSize="20sp" />
 
             <EditText
+                android:id="@+id/editEmailName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rectangleshape"
@@ -111,6 +114,7 @@
                 android:textSize="20sp" />
 
             <EditText
+                android:id="@+id/editEnterAddress"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_marginLeft="25dp"
@@ -129,6 +133,7 @@
                 android:text="Mobile"
                 android:textSize="20sp" />
             <EditText
+                android:id="@+id/editMobile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
@@ -148,6 +153,7 @@
                 android:textSize="20sp" />
 
             <EditText
+                android:id="@+id/editpassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
