--- a/app/src/main/res/menu/activity_dash_board_drawer.xml
+++ b/app/src/main/res/menu/activity_dash_board_drawer.xml
@@ -11,12 +11,12 @@
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:title="Order" />
 
         <item
             android:id="@+id/nav_send"
             android:icon="@drawable/ic_menu_send"
-            android:title="send" />
+            android:title="Shared" />
 
         <item
             android:id="@+id/nav_Aboutus"
