--- a/app/src/main/res/layout/activity_product_description.xml
+++ b/app/src/main/res/layout/activity_product_description.xml
@@ -2,6 +2,7 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
